--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,4 +3,5 @@
 			<h1>Welcome to our Volunteer Manager<br /></h1>
 	    </header>
 	    <p>Volunteer management allows you to create, update and edit volunteers and their roles, projects and tasks. </p>
-  </div class>																
+  	<%= button_to "Log In", login_path, :method => "get", class: "btn btn-info btn-block" %>
+	</div class>																
