Fixed small errors in views and sessions controller based on Rails error messages in browser

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,5 @@
 <% end %>
 </br>
 <% if @user == current_user %>
-<h3><%= link_to "Add a Project", new_user_project_path(@user) %></h3>
+<h3><%= link_to "Add a Project", new_project_path(@user) %></h3>
 <% end %>
