--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@project] do |f| %>
+<%= form_for @project do |f| %>
     <div class="field">
         <%= f.label :name %><br>
         <%= f.text_field :name %>
@@ -17,9 +17,8 @@
     </div>
      <div class="field">
         <%= f.label :time %><br>
-        <%= f.integer_field :time %>
+        <%= f.time_field :time %>
     </div>
-    <% end %><br><br>
     <%= f.submit "Create Project", class:"submit" %>
 <% end %>
 
@@ -27,9 +26,9 @@
         <div class="alert alert-danger" role="alert">
             <p> Error: </p>
             <ul>
-                <% @project.errors.full_messages.each do |msg| %>
-                    <li><%= msg %></li>
-                <% end %>
+            <% @project.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
             </ul>
-        </div>
+            </div>
+            <% end %>
 <% end %>
