--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,5 +6,5 @@
         <%= link_to "Delete project", project_path(@project), :confirm => "Are you sure?", :method => :delete, class: "delete-link"%>
     <% end %></h4>
 
-    <h5>Created at: <%=project.created_at.strftime('%A, %b %d, %Y')%> </h5>
-    <h5>Updated at: <%=project.updated_at.strftime('%A, %b %d, %Y')%> </h5>
+    <h5>Created at: <%= @project.created_at.strftime('%A, %b %d, %Y') %></h5>
+    <h5>Updated at: <%= @project.updated_at.strftime('%A, %b %d, %Y') %></h5>
