Fix small issues reflected in browser errors to allow projects view files to display as intended. Role path is still not correct.

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,7 +19,7 @@
         <%= f.label :time %><br>
         <%= f.time_field :time %>
     </div>
-    <%= f.submit "Create Project", class:"submit" %>
+    <%= f.submit "Submit", class:"submit" %>
 <% end %>
 
 <% if @project.errors.any? %>
