modifications to nested routes within controllers and views to better reflect relationships

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -6,6 +6,6 @@
 
 <% end %>
 
-    <%# <%= link_to "Edit Role", edit_role_path(@role), class: "edit-link" %>
-    <%# <%= link_to "Delete Role", role_path(role), method: :delete %> %> %>
+    <%= link_to "Edit Role", edit_role_path(@role), class: "edit-link" %>
+    <%= link_to "Delete Role", role_path(@role), method: :delete %> 
 
