--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,13 +1,13 @@
 <h1> Edit Role </h1>
 
-<%= form_for (@role) do |f| %>
+<%= form_for [@project, @role] do |f| %>
   <div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</div>
-<% end %><br><br>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </div>
+<br><br>
 
-<%= f.hidden_field :user_id, :value => current_user.id%>
+<%= f.hidden_field :user_id, :value => current_user.id %>
 <%= f.hidden_field :project_id, :value => params[:project_id]%>
       <%= f.submit "Submit", class:"submit" %>
 <% end %>
