Modify routes and role index

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -6,7 +6,7 @@
 
 <% end %>
 
-    <%= link_to "Edit Role", edit_roles_path(@role), class: "edit-link" %> 
+    <%= link_to "Edit Role", edit_role_path(@role), class: "edit-link" %> 
     <%# <%= link_to "Delete Role", role_path(@role), method: :delete %>  
 
    
