Multiple fixes to controllers, layout, view pages and routes following errors in browser and issues with routes

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,3 +2,10 @@
 <% @projects.each do |project| %>
 <h2>Project Name: <%= link_to project.name, project_path(project), class:'name' %></h2><br><br>
 <% end %>
+
+
+<%# <%= link_to "Projects This Year", projects/this_year(@project)%>
+
+
+
+
