Add sign up link to applation layout and add project link to project index page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,7 +4,10 @@
 <% end %>
 
 
-<%# <%= link_to "Projects This Year", projects/this_year(@project)%>
+<%= link_to "Add Project", new_project_path(@project)%>
+<%# <%= link_to "Edit Project", edit_project_path(@project)%> 
+
+<%# %# <%= link_to "Projects This Year", projects/this_year(@project)%>
 
 
 
