Adjust project view files and associate route for this_year scope method to display this year's projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,7 @@
 <%= link_to "Add Project", new_project_path(@project)%>
 <%# <%= link_to "Edit Project", edit_project_path(@project)%> 
 
-<%# %# <%= link_to "Projects This Year", projects/this_year(@project)%>
+<%= link_to "Projects This Year", projects_this_year_path %>
 
 
 
