Added note for potential form functionality in this_year view file

--- a/app/views/projects/this_year.html.erb
+++ b/app/views/projects/this_year.html.erb
@@ -4,4 +4,4 @@
 <h2>Project Year <%= link_to project.name, project_path(project), class:'name' %></h2><br><br>
 <% end %>
 
-<%# <%= render 'form' %> 
+<%# <%= render 'form' need to add @project lin in this_year method of controller and feed it into render form here to make this work* %>
