Modified attribute in h2 header in this_year view file

--- a/app/views/projects/this_year.html.erb
+++ b/app/views/projects/this_year.html.erb
@@ -1,7 +1,5 @@
-<h2>Project Name: </h2>
-
- <% @projects.each do |project| %>
-<h2>Project Year <%= link_to project.name, project_path(project), class:'name' %></h2><br><br>
+<% @projects.each do |project| %>
+<h2>Projects this year: <%= link_to project.name, project_path(project), class:'name' %></h2><br><br>
 <% end %>
 
 <%# <%= render 'form' need to add @project lin in this_year method of controller and feed it into render form here to make this work* %>
