--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -5,10 +5,10 @@
     <%# <h3><%= link_to task.name, task_path(task)</h3>
     <% end %> 
 
-    <%= link_to "All tasks", role_tasks_path(@role) %><br></br>
-
-    <h4 id="role-links"><% if current_user.roles.include?(@role) %>
+       <%# <h4 id="role-links"><% if current_user.roles.include?(@role) %> 
         <%= link_to "Edit Role", edit_role_path(@role), class: "edit-link" %><br></br>
+        <%= link_to "Delete Role", role_path(@role), :confirm => "Are you sure?", :method => :delete, class: "delete-link"%></br></br>
+         <%= link_to "All tasks", role_tasks_path(@role) %><br></br>
         <%= link_to "Add new tasks", new_role_task_path(@role) %><br></br>
-        <%= link_to "Delete Role", role_path(@role), :confirm => "Are you sure?", :method => :delete, class: "delete-link"%>
-    <% end %></h4>
+     
+    <%# <% end %>
