--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
       <li><%= link_to "Log Out", logout_path%></li>
     <% end %>
 
+    <%= link_to "Sign Up Devise", new_user_registration_path %> 
+    <%= link_to "Log In Devise", new_user_session_path %> 
+
     <% if flash[:notice] %>
       <div class="alert alert-danger" role="alert"><%= flash[:notice] %></div>
         <% end %>
