Revert "Add full logout and login links to application layout and modify devise registration new page for style"
This reverts commit 98ea33e050416f3275a6be3469b3d14719e9010d.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,15 +22,8 @@
       <li><%= link_to "Log Out", logout_path%></li>
     <% end %>
 
-  <ul class="nav navbar-nav navbar-right">
-    <% if user_signed_in? %>
-    <li><%= link_to current_user.email, edit_user_registration_path %></li>
-      <li><%= link_to "Logout", destory_user_session_path, method: :delete %></li>
-    <% else %>
-      <li><%= link_to "Sign Up Devise", new_user_registration_path %></li> 
-      <li><%= link_to "Log In Devise", new_user_session_path %></li> 
-    <% end %>
-  </ul>
+    <%= link_to "Sign Up Devise", new_user_registration_path %> 
+    <%= link_to "Log In Devise", new_user_session_path %> 
 
     <% if flash[:notice] %>
       <div class="alert alert-danger" role="alert"><%= flash[:notice] %></div>
