--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,11 @@
     <h2>Project Name: <%= @project.name %></h2>
-    <h4>Project Date: <%= @project.date.strftime('%B %d, %Y') %></h4>
+    <h4>Location: <%= @project.location %></h4>
+    <h4>Date: <%= @project.date.strftime('%B %d, %Y') %></h4>
+    <h4>Time: <%= @project.time %></h4>
+    <h4>Description: <%= @project.description %></h4>
 
-    
-        <%= link_to "Edit Project", edit_project_path(@project)%>
-        <%= link_to "Delete project", project_path(@project), method: :delete %>
+    <%= link_to "Edit Project", edit_project_path(@project)%>
+    <%= link_to "Delete project", project_path(@project), method: :delete %>
   
-
     <h5>Created at: <%= @project.created_at.strftime('%A %b %d, %Y') %></h5>
     <h5>Updated at: <%= @project.updated_at.strftime('%A %b %d, %Y') %></h5>
