--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Projects</h1>
 <% @projects.each do |project| %>
 <h2>Project Name: <%= link_to project.name, project_path(project), class:'name' %></h2>
-<h3>Project Location: <%= link_to project.location, project_path(project), class:'location' %></h3><br>
+<h3>Project Location: <%= project.location %></h3><br>
 <% end %>
 
 
