--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Roles</h1>
 
 <% @roles.each do |role| %>
-    <h2>Role: <%= link_to role.name, role_path(role), class:'name' %></h2><br><br> 
+    <h2>Role: <%= link_to role.name, role_path(role), class:'name' %></h2>
     <p>Posted by: <%= link_to role.user.name, user_path(role.user) %> </p>
 
     <%= link_to "Add Role", new_project_role_path(role) %> 
