--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,4 +3,5 @@
     <h5>Created at: <%= @task.created_at.strftime('%A, %b %d, %Y') %></h5>
     <h5>Updated at: <%= @task.updated_at.strftime('%A, %b %d, %Y') %></h5>
 
-<%= render 'form' %>
+ <%= link_to "Add additional tasks", new_role_task_path(@task) %>
+
