--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,17 @@
   </head>
 
   <body>
-    <%# <% if current_user %>
+    <% if current_user %>
      <% if logged_in? %>
       <li><%= link_to "Welcome, #{current_user.name}!", user_path(current_user) %></li>
-      <li><%= link_to "Projects", projects_path%> </li>
-      <li><%= link_to "Roles", roles_path%> </li>
+      <li><%= link_to "View all Community Projects", projects_path %> </li>
+      <li><%= link_to "View All Roles", roles_path%> </li>
       <li><%= link_to "Log Out", logout_path%></li>
       <% else %>
       <li><%= link_to "Sign Up", signup_path%></li>
       <li><%= link_to "Log In", login_path%></li>
       <li><%= link_to "Log Out", logout_path%></li>
+      <% end %>
     <% end %>
 
     <% if flash[:notice] %>
