--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,10 +3,11 @@
     <h4>Date: <%= @project.date.strftime('%B %d, %Y') %></h4>
     <h4>Time: <%= @project.time %></h4>
     <h4>Description: <%= @project.description %></h4>
+    <h5>Created at: <%= @project.created_at.strftime('%A %b %d, %Y') %></h5>
+    <h5>Updated at: <%= @project.updated_at.strftime('%A %b %d, %Y') %></h5>
 
+<% if current_user.projects.include?(@project) %>
     <%= link_to "Add Roles", new_project_role_path(@project)%>
     <%= link_to "Edit Project", edit_project_path(@project)%>
     <%= link_to "Delete project", project_path(@project), method: :delete %>
-  
-    <h5>Created at: <%= @project.created_at.strftime('%A %b %d, %Y') %></h5>
-    <h5>Updated at: <%= @project.updated_at.strftime('%A %b %d, %Y') %></h5>
+<% end %>
