--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,5 +3,7 @@
     <h5>Created at: <%= @task.created_at.strftime('%A, %b %d, %Y') %></h5>
     <h5>Updated at: <%= @task.updated_at.strftime('%A, %b %d, %Y') %></h5>
 
- <%= link_to "Add additional tasks", new_role_task_path(@task) %>
+<% if current_user.tasks.include?(@task) %>
+    <%= link_to "Add additional tasks", new_role_task_path(@task) %>
+<% end %>
 
