--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,6 @@
 	    <header>
 			<h1>Welcome to our Volunteer Manager<br /></h1>
 	    </header>
-	    <p>Volunteer management allows you to create, update and edit volunteers and their roles, projects and tasks. </p>
+	    <p>Volunteer management allows you to create, update and edit your volunteer roles, projects and tasks. </p>
   	<%= button_to "Log In", login_path, :method => "get", class: "btn btn-info btn-block" %>
 	</div class>																
