--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <% if current_user %>
-     <% if logged_in? %>
+     <%# <% if logged_in? %> 
       <li><%= link_to "Welcome, #{current_user.name}!", user_path(current_user) %></li>
       <li><%= link_to "View all Community Projects", projects_path %> </li>
       <li><%= link_to "View All Roles", roles_path%> </li>
@@ -21,7 +21,7 @@
       <li><%= link_to "Log In", login_path%></li>
       <li><%= link_to "Log Out", logout_path%></li>
       <% end %>
-    <% end %>
+    <%# <% end %>
 
     <% if flash[:notice] %>
       <div class="alert alert-danger" role="alert"><%= flash[:notice] %></div>
