Delete edit and delete actions for tasks and roles, minimize user priviledges

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,5 +4,5 @@
     <h3>Posted by: <%= link_to task.role.user.name, role_path(task.role) %></h3>
 <% end %>
 
-<%= link_to "Edit task", edit_task_path(@task), class: "edit-link" %>
-<%= link_to "Delete task", task_path(@task), method: :delete %>
+<%# <%= link_to "Edit task", edit_task_path(@task), class: "edit-link" %> 
+<%# <%= link_to "Delete task", task_path(@task), method: :delete %> 
