--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
      <%# <% if logged_in? %> 
       <li><%= link_to "Welcome, #{current_user.name}!", user_path(current_user) %></li>
       <li><%= link_to "View all Community Projects", projects_path %> </li>
-      <li><%= link_to "View All Roles", roles_path%> </li>
+      <li><%= link_to "View Your Roles", roles_path%> </li>
       <li><%= link_to "Log Out", logout_path%></li>
       <% else %>
       <li><%= link_to "Sign Up", signup_path%></li>
