--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,14 +1,3 @@
 <h1>Add a new role</h1>
-
-<%= form_for [@project, @role] do |f| %>
-    <div class="field">
-        <%= f.label :name %><br>
-        <%= f.text_field :name %>
-    </div>
-
-<%= f.hidden_field :user_id, :value => current_user.id%>
-<%= f.hidden_field :project_id, :value => params[:project_id]%>
-      <%= f.submit "Submit", class:"submit" %>
-<% end %>
-
+<%= render 'form' %>
 
