Modify view pages formatting

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,9 +7,10 @@
     <h5>Updated at: <%= @project.updated_at.strftime('%A %b %d, %Y') %></h5>
 
 <%# <% if current_user.projects.include?(@project) %> 
-
-<% if current_user.id == @project.id %>
+<% if logged_in? %>
+    <% if current_user.id == @project.id %>
     <%= link_to "Add Roles", new_project_role_path(@project)%>
     <%= link_to "Edit Project", edit_project_path(@project)%>
     <%# <%= link_to "Delete project", project_path(@project), method: :delete %> 
+    <% end %>
 <% end %>
