--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,8 +19,13 @@
         <%= f.label :time %><br>
         <%= f.time_field :time %>
     </div>
+
+    <%= f.hidden_field :user_id, :value => params[:user_id]%>
+    <%= f.hidden_field :project_id, :value => params[:project_id]%>
     <%= f.submit "Submit", class:"submit" %>
 <% end %>
+
+
 
 <% if @project.errors.any? %>
     <div class="alert alert-danger" role="alert">
