--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,17 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+ 
+  
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <% if current_user %>
+     <% if current_user %>
      <%# <% if logged_in? %> 
       <li><%= link_to "Welcome, #{current_user.name}!", user_path(current_user) %></li>
       <li><%= link_to "View all Community Projects", projects_path %> </li>
@@ -25,11 +32,12 @@
 
     <% if flash[:notice] %>
       <div class="alert alert-danger" role="alert"><%= flash[:notice] %></div>
-        <% end %>
+    <% end %>
 
     <% if flash[:msg] %>
       <div class="alert alert-success" role="alert"><%= flash[:msg] %></div>
-        <% end %>
+    <% end %>
     <%= yield %>
+    
   </body>
 </html>
