Modify project show route to only allow users' access to projects they created for editing, for adding roles.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
 
 <%# <% if current_user.id == @project.role.user.id %>
 <% if logged_in? %>
-    <% if current_user.id == @project.user.id %>
+    <% if @current_user.id == @project.user_id %>
     <%= link_to "Add Roles", new_project_role_path(@project)%>
     <%= link_to "Edit Project", edit_project_path(@project)%>
     <%# <%= link_to "Delete project", project_path(@project), method: :delete %> 
