--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @project do |f| %>
+<%= form_for [@user, @project] do |f| %>
     <div class="field">
         <%= f.label :name %><br>
         <%= f.text_field :name %>
@@ -24,8 +24,6 @@
     <%= f.hidden_field :project_id, :value => params[:project_id]%>
     <%= f.submit "Submit", class:"submit" %>
 <% end %>
-
-
 
 <% if @project.errors.any? %>
     <div class="alert alert-danger" role="alert">
