--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,6 +10,9 @@
 <%# <%= link_to "Edit Project", edit_project_path(@project)%> 
 
 <%= link_to "Projects This Year", projects_this_year_path %>
+<%= link_to "Most recently added project", projects_next_project_path %>
+
+ 
 
 
 
