--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,6 @@
 <% end %>
 </br>
 <% if @user == current_user %>
-<h3><%= link_to "Add a Project", new_project_path(@user) %></h3>
+<h3><%= link_to "Add a Project", new_project_path() %></h3> 
 <% end %>
 
