--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @role.user.name %>'s Roles</h1>
+<h1><%= @role.user.name %>'s New Role</h1>
 <h2><%= @role.project.name %> Project </h2>
 <h2> Role Name: <%= @role.name %></h2><br>
 
