--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,10 +4,8 @@
         <%= f.text_field :description %>
     </div>
     <br><br>
-
     <%= f.hidden_field :role_id, :value => params[:role_id]%><br>  
-    <%= f.submit "Create Task", class:"submit" %>
-
+    <%= f.submit "Submit", class:"submit" %>
 <% end %>
 
 <% if @task.errors.any? %>
